style.css
.work-sans-font {
  font-family: "Work Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: weight;
  font-style: normal;
}
header {
  background-color: #1a0b2e;
}
.head-container {
  display: flex;
  color: white;
}
.nav-bar {
  margin: 20px auto;
  display: flex;
  justify-content: space-evenly;
  max-width: 1600px;
  width: 100%;
  align-items: center;

  /* border: 0.5px solid white; */
}
#word {
  background: linear-gradient(90deg, #f7e93f, #fb09b4, #9100f8);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
}

.list {
  line-height: normal;
  font-size: 16px;
  color: #ffffff;
  gap: 32px;
}

.nav-menu {
  display: flex;
  list-style: none;
  align-items: center;
  gap: 51px;
}


.btn {
  padding: 16px;
  border-radius: 30px;
  font-size: 16px;
  font-weight: 600px;
  color: #ffffff;
  background: linear-gradient(#f7e93f, #fb09b4, #9100f8);
  text-align: center;
  align-items: center;
  border: none;
}

.btn {
  position: relative;
  transition: all 0.3s ease;
}

.btn:hover {
  transform: translateY(-3px);
  box-shadow: 0 10px 25px rgba(255, 0, 150, 0.5);
}

.btn1 {
  border: 2px solid #00ff88;
  color: #00ff88;
  border-radius: 30px;
  font-size: 16px;
  background-color: transparent;
  padding: 16px;
  margin-left: 8px;
}

.hamburger-img {
  display: none;
}

.hamburger-img img {
  width: 28px;
}

/* BANNER CONTAINER */
.banner-container {
  background-image: url(./assets/hero-bg.png);
  padding: 120px 20px;
  display: flex;
  justify-content: center;
  margin-top: 0.4px;
}

.hero-wrapper {
  text-align: center;
  max-width: 800px;
}

/* Gradient Circle */
.hero-circle {
  position: relative;
  width: 300px;
  height: 300px;
  margin: 0 auto 40px;
  border-radius: 50%;
  background: linear-gradient(135deg, #f7e93f, #fb09b4, #9100f8);
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Mic Icon */
.mic-icon {
  width: 110px;
}

/* NEW Badge */
.badge {
  position: absolute;
  top: -10px;
  right: -10px;
  background: #00ff88;
  color: #000;
  font-size: 14px;
  font-weight: bold;
  padding: 6px 14px;
  border-radius: 20px;
}
.mic {
  filter: drop-shadow(0 0 20px rgba(255,255,255,0.5));
}

/* Title */
.banner-title h1 {
  font-size: 60px;
  font-weight: 800;
  color: white;
}

.banner-title p {
  font-size: 16px;
  color: #ddd;
  margin: 20px 0;
}

.banner-buttons {
  display: flex;
  justify-content: center;
  gap: 12px;
}


/* ABOUT SECTION */

.about {
  margin: 0;
  padding: 55px;
  background-color: #1a0b2e;
  color: white;
  text-align: center;
  align-items: center;
}
.about-title {
  font-size: 48px;
  font-weight: bold;
}
.about-desc {
  line-height: 20px;
  font-size: 16px;
  margin-bottom: 40px;
}

.card-info {
  display: grid;
  grid-template-columns: repeat(4, 4fr);
  gap: 80px;
  margin: 40px 0;
}
/* ABOUT SECTIO CARD */

.card-title {
  font-size: 48px;
  color: #00ff88;
}

.card-desc {
  color: #ffffff;
  font-size: 16px;
  margin-top: 16px;
}

/* CHOOSE SECTION */

.choose {
  background-color: #230e3d;
  padding: 200px;
  margin: 0 auto;
  color: #FFFFFF;
}
.about-title{
  text-align: center;

}
.choose-box {
  display: grid;
  /* background-color: #4b2f6d80; */
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, 1fr);
  gap: 30px;
  color: #FFFFFF;
}

.radius{
  border-radius: 40px;
}

.box1 {
  border: 1px solid #351165;
  grid-row: span 2;
  gap: 5px;
  padding: 40px;
}

.box2,
.box3 {
  border: 1px solid #351165;
  padding: 40px;

  grid-column: span 2;
}
.box4 {
  border: 1px solid #351165;
  padding: 40px;
  grid-column: span 2;
}
.box5{
   border: 1px solid #351165;
  padding: 40px;
}

.choose-box h1{
  font-weight: bold;
  font-size: 24px;
}

.choose-box p{
  line-height: 24px;
  font-size: 16px;
}

/* FEATURE SECTION */

.feature{
  background-color: #1A0B2E;
  color: #FFFFFF;
  padding: 200px 200px 200px 0px;
  max-width: 100%;
  
}

.feature-card{
  display: grid;
  grid-template-columns: repeat(3,1fr);
  gap: 30px;

}

.card{
  background-color: #39205a38;
  border-radius: 25px;
  
}

.card h1{
  font-size: 24px;
  font-weight: bold;
}

.card p{
  font-size: 16px;
  line-height: 24px;
}

.card h5{
  color: #00ff88;
}

/* Host Section */

.host-body{
  display: flex;
  background-color: #351165ad;
  padding: 20px;
  border-radius: 40px;

}
.host-content{
  margin-left: 12px;
}
.social-media{
  display: grid;
  grid-template-columns: repeat(4,25px);
  gap: 8px;
}
.host-content p{
  font-size: 16px;
  line-height: 24px;
}
.host-content h2{
  font-size: 32px;
  font-weight: bold;
}

footer{
text-align: center;
align-items: center;
  background-image: url(./assets/footer-bg.png);
  height: 350px;
  color: white;

}


.logo1{
  color: white;
  
}

.social-media2{
  display: flex;
  justify-content: center;
  text-align: center;
  align-items: center;
  gap: 12px;
}

.footer-content{
  align-items: center;
  padding: 100px;
}
.logo h1{
  font-size: 64px;
  font-weight: bold;
}

/* Small Device Responsive */

@media screen and (max-width: 576px) {

  
.nav-menu, .nav-bar .btn {
  display: none;
}


  /* Show hamburger */
  .hamburger-img {
    display: block;
  }

  /* Layout */
  .nav-bar {
    justify-content: space-between;
    padding: 0 20px;
  }

  .logo h1 {
    font-size: 28px;
  }
  .card-info {
  display: grid;
  grid-template-columns: repeat(2, 4fr);
  gap: 80px;
  margin: 40px 0;
}

.choose-box {
  display: grid;
  /* background-color: #4b2f6d80; */
  grid-template-columns: repeat(1, 1fr);
  grid-template-rows: repeat(1, 1fr);
  gap: 30px;
  color: #FFFFFF;
}

  .choose, .feature{
    padding: 0px;
  }

.feature-episode{
  align-items: center;
  padding: 50px;
}
.feature-card{
  display: grid;
  grid-template-columns: repeat(1,1fr);
  grid-template-rows: repeat(1,1fr);
  gap: 30px;
  margin: 0 au;
}
.feature h1{
  font-size: 32px;
}

.host-body ,.host-body h1{
  display: inline;
  background-color: #351165ad;
  padding: 20px;
  border-radius: 40px;
  max-width: 70%;

}

.host-content h2{
  font-size: 24px;
}

.social-media2{
  display: grid;
  justify-content: center;
  grid-template-columns: repeat(2,1fr);
  text-align: center;
  align-items: center;
  gap: 12px;
}

}

/* Resonponsive For Large Device */

@media (min-width: 992px) {
  .menu,
  .btn {
    display: flex;
  }

  .hamburger {
    display: none;
  }
  .choose , .feature{
    max-width: 100%;
    padding: 100px;
  }

  .feature-card{
  display: grid;
  grid-template-columns: repeat(2,1fr);
  gap: 30px;
  

}
}

